# OmniAgent-AI

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  GEMINI.md  README.md  docker-compose.prod.yml  docker-compose.yml
.gemini/: sandbox.Dockerfile
.github/workflows/: deploy.yml
agents/: __init__.py  browser_agent.py  coding_agent.py  critic_agent.py  planning_agent.py  presentation_agent.py  report_agent.py  research_agent.py  supervisor_agent.py
agents/browser/: dom_analyzer.py  (+3 more)
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  worker.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: documents.py  health.py  workflows.py
backend/app/api/v1/: documents.py  health.py  router.py  workflows.py
backend/app/core/: config.py  errors.py  exceptions.py  logging.py  observability.py  security.py
backend/app/db/: base.py  database.py  models.py  session.py
backend/app/db/models/: __init__.py  documents.py  workflows.py
backend/app/schemas/: document.py  documents.py  workflow.py  workflows.py
backend/app/services/: document_service.py  documents.py  workflow_service.py  workflows.py
backend/omniagent_backend.egg-info/: requires.txt
backend/scripts/: benchmark_retrieval.py
backend/tests/: conftest.py  test_agent_orchestration.py  test_e2e_verification.py  test_health.py  test_rag_pipeline.py
backend/var/chroma/: chroma.sqlite3
docker/: Dockerfile.backend  Dockerfile.frontend  backend.Dockerfile  frontend.Dockerfile
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
(+41 files in other folders)
